# Qanta

./: .env.example  .gitignore  Dockerfile  README.md  STRUCTURE.md  TECH-STACK.md  _test_full.txt  _test_out.txt  _test_out2.txt  _test_task1.txt  _test_task1b.txt  alembic.ini  docker-compose.yml  issues.md  param_grids.txt  pyproject.toml  run.sh  test_out.txt  test_results.txt  tsc_out.txt
.cursor/rules/: 00-project-overview.mdc  01-architecture-boundaries.mdc  02-trading-safety.mdc  03-auth-and-security.mdc  04-coding-standards.mdc
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_rename_capital_to_capital_budget.py  003_add_library_and_exploration.py
app/: config.py  deps.py  main.py  state.py
app/api/: assistant.py  auth.py  backtest.py  deployments.py  evolution.py  library.py  monitor.py  performance.py  portfolio.py  research.py  settings.py  strategies.py  ws.py
app/models/: __init__.py  base.py  models.py
app/schemas/: assistant.py  auth.py  deployments.py  library.py  monitor.py  portfolio.py  research.py  settings.py  strategies.py  validation.py
app/workers/: job_events.py  main.py  tasks.py
config/: guardrails.yaml  models.yaml  notifications.yaml  portfolio.yaml  validation.yaml
design/: quanta-hifi-dark.html  quanta-hifi-light.html  quanta-hifi-themed.html
docs/: 01-product-and-scope.md  02-architecture.md  03-engine-and-validation.md  04-safety-and-auth.md  05-ux-flows-and-screens.md  06-build-sequence.md  07-dsl-reference.md  08-validation-internals.md  09-api-data-and-tools.md  10-theming-and-ui.md  11-production-and-scaling.md  12-portfolio-safety-and-operations.md  13-strategy-library-and-exploration.md
ops/ibeam/: config.yaml
scripts/: seed_user.py
terraform/: main.tf  variables.tf
tests/: conftest.py
tests/e2e/: test_paper_loop.py
web/: index.html  package.json  tailwind.config.ts  vite.config.ts
(+78 files in other folders)
