[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quanta"
version = "0.1.0"
description = "Personal AI Trading Research & Execution Platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    # ORM / DB
    "sqlalchemy>=2.0,<3",
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "psycopg2-binary>=2.9,<3",
    # Task queue
    "arq>=0.26,<1",
    "redis>=5.2,<6",
    # Auth
    "argon2-cffi>=23.1,<24",
    "itsdangerous>=2.2,<3",
    # LLM gateway
    "litellm>=1.50,<2",
    # Agent orchestration
    "langgraph>=0.2,<1",
    "langchain-core>=0.3,<1",
    # Data & computation
    "numpy>=1.26,<2",
    "scipy>=1.14,<2",
    "pandas>=2.2,<3",
    # Market calendar
    "exchange-calendars>=4.5,<5",
    # HTTP client
    "httpx>=0.27,<1",
    # Secrets
    "boto3>=1.35,<2",
    "python-dotenv>=1.0,<2",
    # YAML config
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "httpx>=0.27,<1",
    "aiosqlite>=0.20,<1",
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
]
openbb = [
    "openbb>=4.3,<5",
]
nautilus = [
    "nautilus_trader>=1.207,<2",
]
pybroker = [
    "pybroker>=3.1,<4",
]
notifications = [
    "python-telegram-bot>=21,<22",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
